@@ -167,7 +167,12 @@ $eventlist = $LMS->GetEventList($filter);
 
 $userid = $filter['userid'];
 
-$userlist = $LMS->GetUserNames();
+$params['short'] = 1;
+if (ConfigHelper::getConfig('phpui.timetable_hide_disabled_users')) {
+    $params['access'] = 1;
+}
+$userlist = $LMS->GetUserList($params);
+
 $SMARTY->assign('userlist', $userlist);
 if (is_array($userid) && in_array('-1', $userid)) {
     $userlist[-1]['id'] = -1;
